correcion de autor

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "apirest"
   ],
-  "author": "david garcia balarez",
+  "author": "david garcia balarezo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/thegeppettodoer/apirestenviroment/issues"
